docker/etc/kubernetes/manifests/rng-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rng
spec:
  ports:
    -
      port: 8080
      protocol: TCP
  selector:
    rng: "true"
  type: ClusterIP
