docker/etc/kubernetes/manifests/hasher-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hasher-netpol
spec:
  ingress:
    -
      from:
        -
          podSelector:
            matchLabels:
              worker: 'true'
      ports:
        -
          port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      hasher: 'true'
  policyTypes:
    - Ingress
