docker/etc/kubernetes/manifests/worker-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-netpol
spec:
  podSelector:
    matchLabels:
      worker: 'true'
  policyTypes:
    - Ingress
